--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -99,7 +99,7 @@
                 <input type="hidden" name="items">
             </fieldset>
              
-            <button type="submit">Cadastrar ponto de coleta</button>
+            <button type="submit">Cadastrar ponto de caridade</button>
     </form>  
     
    
